<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/ChooseThemeText"
        android:text="@string/chooseColor"
        android:textSize="20sp"
        android:layout_marginVertical="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/themeChoiceRadioGroup"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ChooseThemeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/defaultThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTheme"/>

        <RadioButton
            android:id="@+id/lightThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightTheme"/>

        <RadioButton
            android:id="@+id/darkThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darkTheme"/>
    </RadioGroup>
    <Button
        android:id="@+id/acceptButton"
        android:text="@string/acceptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/themeChoiceRadioGroup"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"/>
    <!--        android:backgroundTint="@color/turquoise"-->
    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/themeChoiceRadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="25dp"/>
<!--        android:layout_marginLeft="25dp"-->

    <!--        android:backgroundTint="@color/off_white"-->


</androidx.constraintlayout.widget.ConstraintLayout>